kubernetes/yml/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: default
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging
  template:
    metadata:
      labels:
        k8s-app: kibana-logging
    spec:
      containers:
      - name: kibana-logging

        # official image without logtrail:
#        image: docker.elastic.co/kibana/kibana:5.5.1
#        image: docker.elastic.co/kibana/kibana:6.3.2
        image: docker.elastic.co/kibana/kibana:6.4.2
        # image with logtrail
        # image: wardviaene/kibana-logtrail:5.5.1
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
            memory: 2.5Gi
          requests:
            cpu: 100m
            memory: 2.5Gi
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: default
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Kibana"
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  kibana_mapping
      prefix: /kibana
      timeout_ms: 10000
      service: kibana-logging.default:5601    
      ---
      #apiVersion: ambassador/v0
      #kind:  Mapping
      #name:  kibana_app_mapping
      #prefix: /app/kibana
      #timeout_ms: 10000
      #service: ambassador:31380
      #host_redirect: true
      #path_redirect: /kibana/app/kibana
    
spec:
  ports:
  - port: 5601
    protocol: TCP
    nodePort: 31601    
    targetPort: ui
  selector:
    k8s-app: kibana-logging
  type: NodePort
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  rules:
  - host: kibana
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601
---
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
spec:
  hosts:
  - "*"
  gateways:
  - itzone-gateway
  http:
  - match:
    - uri:
        prefix: /kibana
    - uri:
        prefix: /app/kibana
    route:
    - destination:
        host: ambassador
        port:
          number: 80
